syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "IntegrationSystem.Presentation.InternalServices.UserMerger";

package xml;

service XML {
	rpc XMLLastChanged (XMLLastChangedRequest) returns (XMLLastChangedReply);
	rpc XMLGetUsers (XMLGetUsersRequest) returns (XMLGetUsersReply);
}

message XMLLastChangedRequest {}

message XMLLastChangedReply {
	google.protobuf.Timestamp time = 1;
	int32 day = 2;
	int32 month = 3;
	int32 year = 4;
}

message XMLGetUsersRequest {}

message XMLGetUsersReply {
    repeated XMLUser users = 1;
}

message XMLUser {
    int32 number = 1;
	string name = 2;
    string title = 3;
    string address = 4;
    string city = 5;
    string email = 6;
    string mobile = 7;
}
